# snake-game-c

./: .gitignore  CMakeLists.txt  CONTROLS.md  README.md  README_DETAILED.md  build.bat  build.sh  game.js  index.html  package.json  styles.css
include/: Food.h  Game.h  Snake.h
src/: Food.cpp  Game.cpp  Snake.cpp  fixed-15.txt  main.cpp
